commento-oauth.scss: fix alignment of social login buttons
In Microsoft Edge social login buttons wasn't be aligned.

Closes https://gitlab.com/commento/commento/issues/150

--- a/frontend/sass/commento-oauth.scss
+++ b/frontend/sass/commento-oauth.scss
@@ -5,8 +5,6 @@
   justify-content: center;
 
   .commento-oauth-buttons {
-    display: flex;
-    flex-direction: column;
     align-items: center;
     position: absolute;
     z-index: 1;
